<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/select" android:title="@string/details"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/edit" android:title="@string/edit"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/edit_all" android:title="@string/edit_all"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/add" android:title="@string/add"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/next" android:title="@string/next"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/prev" android:title="@string/prev"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/home" android:title="@string/home"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/update" android:title="@string/update"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_reset" android:title="@string/action_reset"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
